--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-session": "^2.0.0",
+    "helmet": "^7.0.0",
     "knex": "^3.0.1",
     "morgan": "^1.10.0",
+    "passport": "^0.6.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3"
   },
   "devDependencies": {
