--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-session": "^2.0.0",
+    "express-session": "^1.17.3",
     "helmet": "^7.0.0",
     "knex": "^3.0.1",
     "morgan": "^1.10.0",
