--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,8 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.11.3",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
